[chore]:{move codes to submodule.}
[chore]:{移动代码到子模块}

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">SoftCodec</string>
+    <string name="tips_cannt_connect">Cannt connect to %s</string>
+    <string name="tips_connect_successfully">connected to %s.</string>
 </resources>
